<resources>
    <string name="app_name" translatable="false">Bundle</string>
    <string name="main_header" translatable="false">Bundle</string>
    <string name="preferences_header">Preferences</string>
    <string name="article_image_view_content_description" translatable="false">This view holds the image for each news.</string>
    <string name="top_headlines_header">Top Headlines</string>
    <string name="everything_header">Everything</string>
    <string name="sources_header">Sources</string>
    <string name="settings_text">Preferences</string>
    <string name="libs_text">Libraries</string>
    <string name="search_text">Search</string>
    <string name="about_text">About</string>
    <string name="search_hint_text">Search Bundle</string>
    <string name="open_in_browser_menu_text">Open in browser</string>
    <string name="share_menu_text">Share</string>
    <string name="night_mode_text">Night Mode</string>
    <string name="day_mode_text">Day Mode</string>
    <string name="twice_press_to_exit">Press back again to exit.</string>
    <string name="openIntentTitle">Open "%s" in browser</string>
    <string name="shareIntentTitle">Share "%s" with</string>
    <string name="shareIntentExtraText">To view \'%s\', click the url: %s</string>
    <string name="source_name_news">News by %s</string>
    <string name="top_headlines_preference_title">Preferences for Top Headline News</string>
    <string name="sources_preference_title">Preferences for Sources</string>
    <string name="everything_preference_title">Preferences for Everything</string>
    <string name="top_headlines_error_text">An error occurred. Try changing search parameters or check connection.</string>
    <string name="everything_error_text">An error occurred. Try changing search query or check connection.</string>
    <string name="sources_error_text">An error occurred. Try changing search parameters or check connection.</string>
    <string name="custom_sources_error_text">An error occurred. There might be no news by %s</string>
    <string name="progress_dialog_wait">Wait a second…</string>
    <string name="snackBar_warning_text">You seem to not have a valid connection!</string>
    <string name="snackBar_offline_warning_text">You seem to not have a valid connection! Offline data is displayed.</string>
    <string name="snackBar_action_text">Dismiss</string>
    <string name="urgent_internet_warning">Couldn\'t refresh feed.</string>
    <string name="urgent_internet_info">Connected, loading.</string>
    <string name="pref_screen_no_parameter_error">You have to choose at least 1 parameter among Country, Source or Category.</string>
    <string name="version" translatable="false">Version: %s</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="about_description">A playground with the latest techs.\n\n This project is a playground to clutch MVVM pattern, Architecture Components, Room and others. This project actively uses Room Persistence Library to show feed in case no internet connection. Along with Lifecycle Components, API datum are consistently observed to able to detect whether or not there is any update or change. The app also benefits from PreferenceScreen to display news according to users\' preferences. You can choose country, category, source or languages for different lists.\n\n <b>This app is powered by NewsAPI.org</b></string>
    <string name="connect_with_me" translatable="false">Connect with me</string>
    <string name="email" translatable="false">nuhkocaa@gmail.com</string>
    <string name="email_me">Email me</string>
    <string name="personal_website" translatable="false">http://www.nuhkoca.com/</string>
    <string name="visit_my_website">Visit my website</string>
    <string name="follow_me_on_social_media">Follow me on social media</string>
    <string name="personal_facebook" translatable="false">nuhkocaa</string>
    <string name="add_me_on_facebook">Add me on Facebook</string>
    <string name="personal_twitter" translatable="false">nuhkocaa_</string>
    <string name="follow_me_on_twitter">Follow me on Twitter</string>
    <string name="personal_youtube" translatable="false">UCigh7hafmSrsQZvv6PKQptw</string>
    <string name="follow_me_on_youtube">Follow me on Youtube</string>
    <string name="personal_play_store" translatable="false">9011472759199976374</string>
    <string name="rate_me_on_google_play_store">Rate me on Google Play Store</string>
    <string name="personal_instagram" translatable="false">nuhkocaa</string>
    <string name="follow_me_on_instagram">Follow me on Instagram</string>
    <string name="github" translatable="false">nuhkoca</string>
    <string name="fork_me_on_github">Fork me on Github</string>
    <string name="libs_that_we_inspire">Libs that we inspire!</string>
    <string name="open_source_libs" translatable="false">Open Source Libraries</string>
    <string name="pref_country_label">Country</string>
    <string name="pref_country_summary">News from the selected country will be displayed.</string>
    <string name="pref_country_label_all">None</string>
    <string name="pref_country_all_value" translatable="false"></string>
    <string name="pref_country_label_argentina">Argentina(AR)</string>
    <string name="pref_country_ar_value" translatable="false">ar</string>
    <string name="pref_country_label_australia">Australia(AU)</string>
    <string name="pref_country_au_value" translatable="false">au</string>
    <string name="pref_country_label_austria">Austria(AT)</string>
    <string name="pref_country_at_value" translatable="false">at</string>
    <string name="pref_country_label_belgium">Belgium(BE)</string>
    <string name="pref_country_be_value" translatable="false">be</string>
    <string name="pref_country_label_bulgaria">Bulgaria(BG)</string>
    <string name="pref_country_bg_value" translatable="false">bg</string>
    <string name="pref_country_label_brazil">Brazil(BR)</string>
    <string name="pref_country_br_value" translatable="false">br</string>
    <string name="pref_country_label_canada">Canada(CA)</string>
    <string name="pref_country_ca_value" translatable="false">ca</string>
    <string name="pref_country_label_china">China(CN)</string>
    <string name="pref_country_cn_value" translatable="false">cn</string>
    <string name="pref_country_label_colombia">Colombia(CO)</string>
    <string name="pref_country_co_value" translatable="false">co</string>
    <string name="pref_country_label_cuba">Cuba(CU)</string>
    <string name="pref_country_cu_value" translatable="false">cu</string>
    <string name="pref_country_label_czech_republic">Czech Republic(CZ)</string>
    <string name="pref_country_cz_value" translatable="false">cz</string>
    <string name="pref_country_label_egypt">Egypt(EG)</string>
    <string name="pref_country_eg_value" translatable="false">eg</string>
    <string name="pref_country_label_france">France(FR)</string>
    <string name="pref_country_fr_value" translatable="false">fr</string>
    <string name="pref_country_label_germany">Germany(DE)</string>
    <string name="pref_country_de_value" translatable="false">de</string>
    <string name="pref_country_label_greece">Greece(GR)</string>
    <string name="pref_country_gr_value" translatable="false">gr</string>
    <string name="pref_country_label_hong_kong">Hong Kong(HK)</string>
    <string name="pref_country_hk_value" translatable="false">hk</string>
    <string name="pref_country_label_hungary">Hungary(HU)</string>
    <string name="pref_country_hu_value" translatable="false">hu</string>
    <string name="pref_country_label_india">India(IN)</string>
    <string name="pref_country_in_value" translatable="false">in</string>
    <string name="pref_country_label_indonesia">Indonesia(ID)</string>
    <string name="pref_country_id_value" translatable="false">id</string>
    <string name="pref_country_label_ireland">Ireland(IE)</string>
    <string name="pref_country_ie_value" translatable="false">ie</string>
    <string name="pref_country_label_israel">Israel(IL)</string>
    <string name="pref_country_il_value" translatable="false">il</string>
    <string name="pref_country_label_italy">Italy(IT)</string>
    <string name="pref_country_it_value" translatable="false">it</string>
    <string name="pref_country_label_japan">Japan(JP)</string>
    <string name="pref_country_jp_value" translatable="false">jp</string>
    <string name="pref_country_label_latvia">Latvia(LT)</string>
    <string name="pref_country_lt_value" translatable="false">lt</string>
    <string name="pref_country_label_lithuania">Lithuania(LV)</string>
    <string name="pref_country_lv_value" translatable="false">lv</string>
    <string name="pref_country_label_malaysia">Malaysia(MY)</string>
    <string name="pref_country_my_value" translatable="false">my</string>
    <string name="pref_country_label_mexico">Mexico(MX)</string>
    <string name="pref_country_mx_value" translatable="false">mx</string>
    <string name="pref_country_label_morocco">Morocco(MA)</string>
    <string name="pref_country_ma_value" translatable="false">ma</string>
    <string name="pref_country_label_netherlands">Netherlands(NL)</string>
    <string name="pref_country_nl_value" translatable="false">nl</string>
    <string name="pref_country_label_new_zealand">New Zealand(NZ)</string>
    <string name="pref_country_nz_value" translatable="false">nz</string>
    <string name="pref_country_label_nigeria">Nigeria(NG)</string>
    <string name="pref_country_ng_value" translatable="false">ng</string>
    <string name="pref_country_label_norway">Norway(NO)</string>
    <string name="pref_country_no_value" translatable="false">no</string>
    <string name="pref_country_label_philippines">Philippines(PH)</string>
    <string name="pref_country_ph_value" translatable="false">ph</string>
    <string name="pref_country_label_poland">Poland(PL)</string>
    <string name="pref_country_pl_value" translatable="false">pl</string>
    <string name="pref_country_label_romania">Romania(RO)</string>
    <string name="pref_country_ro_value" translatable="false">ro</string>
    <string name="pref_country_label_russia">Russia(RU)</string>
    <string name="pref_country_ru_value" translatable="false">ru</string>
    <string name="pref_country_label_saudi_arabia">Saudi Arabia(SA)</string>
    <string name="pref_country_sa_value" translatable="false">sa</string>
    <string name="pref_country_label_serbia">Serbia(RS)</string>
    <string name="pref_country_rs_value" translatable="false">rs</string>
    <string name="pref_country_label_singapore">Singapore(SG)</string>
    <string name="pref_country_sg_value" translatable="false">sg</string>
    <string name="pref_country_label_slovakia">Slovakia(SK)</string>
    <string name="pref_country_sk_value" translatable="false">sk</string>
    <string name="pref_country_label_slovenia">Slovenia(SI)</string>
    <string name="pref_country_si_value" translatable="false">si</string>
    <string name="pref_country_label_south_africa">South Africa(ZA)</string>
    <string name="pref_country_za_value" translatable="false">za</string>
    <string name="pref_country_label_south_korea">South Korea(KR)</string>
    <string name="pref_country_kr_value" translatable="false">kr</string>
    <string name="pref_country_us_value" translatable="false">us</string>
    <string name="pref_top_headlines_country_key" translatable="false">top-headlines-country</string>
    <string name="pref_source_label">Sources</string>
    <string name="pref_source_key" translatable="false">top-headlines-source</string>
    <string name="pref_language_label">Language</string>
    <string name="pref_language_summary">News sources from the selected language will be displayed.</string>
    <string name="pref_language_en_value" translatable="false">en</string>
    <string name="pref_language_key" translatable="false">source-language</string>
</resources>